crates/smart-config/tests/ui/derives/param_coinciding_with_config.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/derives/param_coinciding_with_config.rs:8:10
  |
8 | #[derive(DescribeConfig)]
  |          ^^^^^^^^^^^^^^ evaluation panicked: Name / alias `nested` of param `TestConfig.field` coincides with a name / alias of a nested config `TestConfig.nested`. This is an unconditional error; config deserialization relies on the fact that configs never coincide with params
  |
  = note: this error originates in the derive macro `DescribeConfig` (in Nightly builds, run with -Z macro-backtrace for more info)
